fixed overflow.

--- a/artificial.css
+++ b/artificial.css
@@ -3,7 +3,7 @@
 /* =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-= */
 html, body {
     background: black;
-    overflow: hiddenl;
+    overflow: hidden;
     padding: 0;
     border: 0;
     margin: 0;
